# MiraiNativeCPP

./: .gitignore  BuildCommand.txt  CMakeLists.txt  CMakeSettings.json  README.md
Source/Private/: Bot.cpp  Globals.cpp  MiraiInterfaceImp.cpp  MiraiInterfaceImp.h  MiraiNativeCPP.cpp  NativeCPPCommon.h
Source/Private/Archive/: Archive.cpp  MemoryReader.cpp  MemoryWriter.cpp
Source/Private/Bot/: IMiraiBot.cpp  MiraiBotImp.cpp  MiraiBotImp.h
Source/Private/Contact/: MiraiContactImp.cpp  MiraiContactImp.h
Source/Private/ContactOrBot/: MiraiContactOrBotImp.cpp  MiraiContactOrBotImp.h
Source/Private/Factory/: IMiraiLoggerFactory.cpp  MiraiLoggerFactoryGeneric.cpp  MiraiLoggerFactoryGeneric.h
Source/Private/Interface/: IMiraiInterface.cpp  MiraiInterfaceImp.cpp  MiraiInterfaceImp.h
Source/Private/Logger/: MiraiPlatformLogger.cpp  MiraiPlatformLogger.h
Source/Private/UserOrBot/: MiraiUserOrBotImp.cpp  MiraiUserOrBotImp.h
Source/Private/Utils/: ECDH.cpp  ICMPHeader.cpp  ICMPPinger.cpp  IMiraiBotConfiguration.cpp  IMiraiUtilsHelper.cpp  IPv4Header.cpp  JceStruct.cpp  JceStructDecoder.cpp  JceStructEncoder.cpp  MD5.cpp  MiraiBotConfigurationImp.cpp  MiraiBotConfigurationImp.h  MiraiUtilsHelperImp.cpp  MiraiUtilsHelperImp.h  RandomUtils.cpp
Source/Public/: Bot.h  Definitions.h  Globals.h  IMiraiInterface.h  IMiraiLogger.h  IMiraiLoggerFactory.h  MiraiNativeCPP.h
Source/Public/Archive/: Archive.h  MemoryArchive.h  MemoryReader.h  MemoryWriter.h
Source/Public/Interfaces/: IMiraiBot.h  IMiraiBotConfiguration.h  IMiraiContact.h  IMiraiContactOrBot.h  IMiraiInterface.h  IMiraiLogger.h  IMiraiLoggerFactory.h  IMiraiNudge.h  IMiraiUserOrBot.h  IMiraiUtilsHelper.h
Source/Public/Structures/: Authority.h  DeviceInfo.h  Guild.h  HighwayInfo.h  JceStructures.h  Network.h  OICQ.h
Source/Public/Utils/: ECDH.h  ICMPHeader.h  ICMPPinger.h  IPv4Header.h  JceStruct.h  JceStructDecoder.h  JceStructEncoder.h  MD5.h  RandomUtils.h
